make CORS allowed origins configurable via environment variable
Origins were hardcoded to wildcard, meaning any website could make
cross-origin requests to the API. Now configurable via CORS_ALLOWED_ORIGINS
env var (comma-separated), defaulting to * for local development.
Docker compose sets it to localhost ports for a safer default.